# docker-workshop

pipeline/: Dockerfile  docker-compose.yaml  ingest_data.py  notebook.ipynb  pipeline.py  pyproject.toml
pipeline/.ipynb_checkpoints/: notebook-checkpoint.ipynb
