[project]
name = "pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas>=3.0.4",
    "psycopg2-binary>=2.9.12",
    "pyarrow>=24.0.0",
    "sqlalchemy>=2.0.51",
    "tqdm>=4.68.3",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "pgcli>=4.5.0",
]
